Added sessions and handlers
